# solana-multiway-swap

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  TestEnvironment.txt  good_idl.json  lib.rs  package-lock.json  package.json  tempIdl.ts  tmp.json  tsconfig.json
app/: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.all.json  tsconfig.base.json  tsconfig.json
app/src/: App.tsx  custom.tsx  idl.tsx  solana.const.tsx  solana.errors.tsx  solana.programInstruction.tsx  solana.test.tsx  solana.tsx  solana.types.tsx  solana.utils.tsx  util.tsx
app/src/neoSwap.module/: neoSwap.module.tsx
app/src/neoSwap.module.v4.2/: baseconfig.json  index.tsx  package-lock.json  package.json  tsconfig.json
app/src/neoSwap.module.v4.2/functions.neoswap/: all.Initialize.neoSwap.module.tsx  cancelAndClose.neoSwap.module.tsx  claimAndClose.neoSwap.module.tsx  deposit.neoSwap.module.tsx  depositPresigned.neoSwap.module.tsx  depositUserOnly.neoSwap.module.tsx  hasUserDepositedBeforePresigned.neoSwap.module.tsx
app/src/neoSwap.module.v4.2/utils.neoSwap/: airdropDev.tsx  appendTransactionToArray.neosap.tsx  const.neoSwap.tsx  convertAllTransaction.neoswap.tsx  createPdaAta.neoswap.tsx  findAtaFromMint.neoswap.tsx  findNftData.tsx  findNftMasterEdition.tsx  findNftMetadataAccount.tsx  findOrCreateAta.neoSwap.tsx  findUserTokenRecord.tsx  getNftData.tsx  getProgram.neoswap.tsx  getSeedfromData.neoswap.tsx  getSwapDataFromPDA.neoSwap.tsx  idl.tsx  ocpAccount.tsx
create-react-app-starter-copy/: package-lock.json  package.json
create-react-app-starter-copy/src/: App.tsx  idl.tsx  solana.const.tsx  solana.errors.tsx  solana.programInstruction.tsx  solana.tsx  solana.types.tsx  solana.utils.tsx
create-react-app-starter/sav/wallet-adapter-jiji/: README.md  package.json
create-react-app-starter/sav/wallet-adapter-wallets/: package.json
create-react-app-starter/src/: App.tsx
examples/: swap.ts
neoSwap.module/: neoSwap.module.tsx
neoSwap.module/functions.neoswap/: all.Initialize.neoSwap.module.tsx  claim.neoSwap.module.tsx  deposit.neoSwap.module.tsx  init.Initialize.neoSwap.module.tsx  sadd.Initialize.neoSwap.module.tsx  validate.Initialize.neoSwap.module.tsx  validateClaimed.neoSwap.module.tsx  validateDeposit.neoSwap.module.tsx
neoSwap.module/functions.neoswap/createInstruction/: cancel.nft.neoswap.tsx  cancel.sol.neoswap.tsx  claim.sol.neoswap.tsx  deposit.sol.neoswap.tsx
neoSwap.module/utils.neoSwap/: appendTransactionToArray.neosap.tsx  const.neoSwap.tsx  createPdaAta.neoswap.tsx  findAtaFromMint.neoswap.tsx  findOrCreateAta.neoSwap.tsx  getSwapDataFromPDA.neoSwap.tsx
programs/neoSwap/: Cargo.toml
programs/neoSwap/src/: lib.rs
programs/swapCoontractTest/: Cargo.toml
programs/swapCoontractTest/src/: lib.rs
readyTests/: AccountNotInitialized.ts  BuyItemNotFoundInUserPda.ts  DataRemovedFronUserPda.ts  depositWrongNft.ts  depositWrongNftPresigned.ts  minimumtosellbigger_than_maxtobuy.ts  normalUserLeftToDeposit.ts  notEnoughFundsDelegated.ts  notEnoughTopUp.ts  sumIsntNull.ts  testStatus.ts  userPdaUnknownSigner.ts  wrongsignerforswap.ts
tests/: MAINNET_populateSC.ts  cnft.ts  collectin_bid.ts  collectionSwap.ts  collectionSwapNpm copy.ts  collectionSwapNpm.ts  collection_bid_happy.ts  depositInSwap.ts  depositWrongNft.ts  fongibleTokens.ts  happypath.ts  idl.ts  manualTest copy.ts  manualTest.ts  merkle.ts  mix_Presign&normalSign copy.ts  mix_Presign&normalSign2.ts  mix_Presign&normalSigncopy.ts  neoSwap.ts  neoSwapTest.ts  ocp.ts  presigning.ts  swapCoontractTest.ts  test_case.ts
untest/: DEPRECIATEDmanualTest.ts  DEPRECIATEDneoSwap.ts  DEPRECIATEDsft_test.ts  MAINNET_populateSC.ts  MAINNETcollectionSwapNpm.ts  collectin_bid_unhappy.ts  collectionSwapNpm copy.ts  collectionSwapNpm.ts  collectionSwapRaw.ts  createEnv.ts  depositInSwap.ts  fongibleTokens.ts  happypath copy.ts  happypath.ts  incorrect Presign Data.ts  mainNS.rs  manualTest.ts  merkle.ts  merkleTestlib.rs  mint_collection.ts  mix_Presign&normalSign.ts  mix_Presign&normalSign2.ts  neoSwap.ts  neoSwapTest.ts  pda.ts  presigning.ts  sft_test.ts  token2022.ts
untest/save/: Cargo.toml
untest/save/src/: lib.rs
untest/untestprogram/: mainNSOld.rs  merkle.rs  metaplex_adapter.rs
(+88 files in other folders)
