[package]
name = "neoSwap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "neo_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-bubblegum = "1.2.0"
mpl-token-metadata = "4.1.1"
solana-address-lookup-table-program = "1.18.2"
solana-program = "1.18.2"
spl-account-compression = "0.3.0"
spl-associated-token-account = "2.3.1"
spl-noop = "0.2.0"





# solana-program = "1.17.0"


# mpl-bubblegum = "1.2.0"
# mpl-token-metadata = "4.1.1"
# solana-address-lookup-table-program = "1.18.2"
# # solana-program = "1.17.0"
# spl-account-compression = "0.3.0"
# spl-associated-token-account = "2.3.1"
# spl-noop = "0.2.0"

# solana-program = "1.17.0"
# mpl-bubblegum = "1.2.0"
# mpl-token-metadata = "4.1.1"
# spl-account-compression = "0.3.0"
# spl-associated-token-account = "2.3.1"
# spl-noop = "0.2.0"

# anchor-lang = "0.29.0"
# mpl-bubblegum = "1.2.0"
# solana-address-lookup-table-program = "1.18.2"
# spl-associated-token-account = "2.1.0"
# spl-noop = "0.2.0"
# mpl-token-metadata = "3.2.0"
# spl-account-compression = "0.2.0"
# @metaplex-foundation/mpl-token-metadata
[dev-dependencies]
# solana-sdk = "1.14"
# solana-program-test = "1.14"
