[package]
name = "neoSwapSave"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "neo_swap_save"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl= "0.26.0"
spl-associated-token-account = "~1.1.1"
# mpl-token-metadata = "1.10.0"
mpl-token-metadata = { version = "1.10.0", features = ["no-entrypoint"] }
# open_creator_protocol = { version = "0.3.0", features = ["cpi"] }
# spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
# solana-sdk = "1.14"
# solana-program-test = "1.14"